--- a/config
+++ b/config
@@ -1,10 +1,10 @@
 if test -n "$ngx_module_link"; then
     ngx_module_type=HTTP
-    ngx_module_name=ngx_http_rshield_module
-    ngx_module_srcs="$ngx_addon_dir/ngx_http_rshield_module.c"
+    ngx_module_name=ngx_http_powshield_module
+    ngx_module_srcs="$ngx_addon_dir/ngx_http_powshield_module.c"
 
     . auto/module
 else
-    HTTP_MODULES="$HTTP_MODULES ngx_http_rshield_module"
-    NGX_ADDON_SRCS="$NGX_ADDON_SRCS $ngx_addon_dir/ngx_http_rshield_module.c"
+    HTTP_MODULES="$HTTP_MODULES ngx_http_powshield_module"
+    NGX_ADDON_SRCS="$NGX_ADDON_SRCS $ngx_addon_dir/ngx_http_powshield_module.c"
 fi
